--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <h1>首頁</h1>
+    <nav><ul>
+        <li>首頁</li>
+    </ul></nav>
     
     <script src="main.js"></script>
 </body>
