--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,12 +8,22 @@
     <link rel="stylesheet" href="style.css">
     <title>首頁</title>
 </head>
+
 <body>
     <h1>首頁</h1>
-    <nav><ul>
-        <li>首頁</li>
-    </ul></nav>
-    
+    <nav>
+        <ul>
+            <li>首頁</li>
+        </ul>
+    </nav>
+    <div class="container">
+        <div class="wrappr">
+             
+        </div>
+
+    </div>
+
     <script src="main.js"></script>
 </body>
+
 </html>
